--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ a{ text-decoration:none;}
 .install span{ font-size:14px; color:#999;}</style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
-<body><a href="itms-services://?action=download-manifest&url=https://192.168.0.111:8443/examples/manifest.plist">
+<body><a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/charles-linzc/partake/master/manifest.plist">
 <div class="install">
-<div class="icon"><img alt="" src="https://192.168.0.111:8443/examples/image.57x57.png" /></div>
+<div class="icon"><img alt="" src="https://raw.githubusercontent.com/charles-linzc/partake/master/image.57x57.png" /></div>
 <h1>应用名称xxx</h1><br />
 <h3><br />
 <br />测试版安装方法：在iPhone上用Safari打开此页面，点击图标即可安装</h3>
